--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
-    "pinia": "^2.0.11",
     "vue": "^3.2.31",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.2",
-    "vite": "^2.8.4",
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "vite": "^2.8.4"
   }
 }
