--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.2",
+    "autoprefixer": "^10.4.2",
     "axios": "^0.21.1",
+    "postcss": "^8.4.8",
+    "tailwindcss": "^3.0.23",
     "vite": "^2.8.4"
   }
 }
